--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "keywords": [],
   "author": "Dmitry",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "reset.css": "^2.0.2",
+    "swiper": "^6.8.1"
+  },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-beta.2",
     "parcel": "^2.0.0-beta.2",
