--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
   "license": "ISC",
   "dependencies": {
     "reset.css": "^2.0.2",
-    "swiper": "^6.8.1"
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-beta.2",
-    "@parcel/transformer-webmanifest": "^2.0.0-beta.2",
+    "@parcel/transformer-image": "^2.0.0-rc.0",
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@parcel/transformer-webmanifest": "^2.0.0-nightly.2186",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.1.0",
-    "parcel": "^2.0.0-beta.2",
+    "node-sass": "^6.0.1",
+    "parcel": "^2.0.0-rc.0",
     "prettier": "^2.3.2",
-    "sass": "^1.35.2",
+    "sass": "^1.38.1",
+    "sharp": "^0.29.0",
     "stylelint": "^13.13.1",
-    "stylelint-config-recess-order": "^2.4.0",
+    "stylelint-config-recess-order": "^2.5.0",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-order": "^4.1.0",
