--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Dmitry Voskoboev",
   "license": "ISC",
   "dependencies": {
+    "inputmask": "^5.0.6",
     "reset.css": "^2.0.2",
     "swiper": "^6.8.4"
   },
@@ -29,7 +30,6 @@
     "parcel": "^2.0.0-rc.0",
     "prettier": "^2.3.2",
     "sass": "^1.38.1",
-    "sharp": "^0.29.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recess-order": "^2.5.0",
     "stylelint-config-standard": "^22.0.0",
